--- a/page/templates/page/baseB.html
+++ b/page/templates/page/baseB.html
@@ -65,7 +65,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/clublist">All Clubs</a>
+                  <a class="nav-link" href="{% url 'post_list_full' num=0 %}">All Clubs</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/myclubs">My Clubs</a>
