--- a/page/templates/page/post_list_full.html
+++ b/page/templates/page/post_list_full.html
@@ -55,6 +55,25 @@
 
 
     {% endfor %}
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        {% if notFirst %}
+        <li class="page-item">
+          <a class="page-link" href="{% url 'post_list_full' num=numPrev %}" tabindex="-1">Previous</a>
+        </li>
+        {% endif %}
+        <li class="page-item"><a class="page-link" href="{% url 'post_list_full' num=0 %}">1</a></li>
+        <li class="page-item"><a class="page-link" href="{% url 'post_list_full' num=1 %}">2</a></li>
+        <li class="page-item"><a class="page-link" href="{% url 'post_list_full' num=2 %}">3</a></li>
+        <li class="page-item"><a class="page-link" href="{% url 'post_list_full' num=3 %}">4</a></li>
+        <li class="page-item"><a class="page-link" href="{% url 'post_list_full' num=4 %}">5</a></li>
+        {% if notLast %}
+        <li class="page-item">
+          <a class="page-link" href="{% url 'post_list_full' num=numNext %}">Next</a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
 
     </div>
 
