--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -141,9 +141,11 @@
                         &nbsp;&nbsp;&nbsp;
                       </div>
                       </form>
-                            <a class="btn btn-outline-primary btn-lg" href="{% url 'post_list_full' num=0 %}">&nbsp;&nbsp;All clubs&nbsp;&nbsp;</a>
+                            <a class="btn btn-outline-primary btn-lg h" href="{% url 'post_list_full' num=0 %}">&nbsp;&nbsp;All clubs&nbsp;&nbsp;</a>
                             &nbsp;&nbsp;
-                            <a class="btn btn-outline-secondary btn-lg" href="{% url 'top20' %}">&nbsp;&nbsp;Top 20&nbsp;&nbsp;</a>
+                            <a class="btn btn-outline-danger btn-lg h" href="/myclubs">&nbsp;&nbsp;My Clubs&nbsp;&nbsp;</a>
+                            &nbsp;&nbsp;
+                            <a class="btn btn-outline-secondary btn-lg h" href="{% url 'top20' %}">&nbsp;&nbsp;Top 20&nbsp;&nbsp;</a>
                             <br>
                             <br>
                             
