--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -239,7 +239,7 @@
       <footer class="py-5 bg-dark">
       <div class="container">
         <br>
-        <h4 class="m-0 text-center text-white">"What enables the wise ... [to] achieve things beyond the reach of ordinary men is FOREKNOWLEDGE." - <a href="https://en.wikipedia.org/wiki/The_Art_of_War">Sun Tzu</a></h4>
+        <p class="m-0 text-center text-white">"What enables the wise ... [to] achieve things beyond the reach of ordinary men is FOREKNOWLEDGE." - <a href="https://en.wikipedia.org/wiki/The_Art_of_War">Sun Tzu</a></p>
         <br>
       </div>
       <!-- /.container -->
