--- a/page/templates/page/baseB.html
+++ b/page/templates/page/baseB.html
@@ -74,6 +74,9 @@
                   <a class="nav-link" href="/top20">Top 20</a>
                 </li>
                 <li class="nav-item active">
+                  <a class="nav-link" href="/aboutus">About Us</a>
+                </li>
+                <li class="nav-item active">
                   <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">Help!</a>
                 </li>
                 {% if request.user.is_authenticated %}
