Search has text

--- a/page/templates/page/baseB.html
+++ b/page/templates/page/baseB.html
@@ -123,7 +123,7 @@
                       <option value="16">Theater</option>
                     </select>
                   </div>
-                  <input type="text" name = "q" class="form-control" aria-label="Text input with dropdown button">
+                  <input type="text" name = "q" class="form-control" aria-label="Text input with dropdown button" placeholder="Search by club name, category, interest, and more!">
                     <div class="input-group-append">
                       <button class="btn btn-outline-dark" type="submit" value = search>Search</button>
                     </div>
