--- a/page/templates/page/about_us.html
+++ b/page/templates/page/about_us.html
@@ -60,18 +60,24 @@
           <!-- Introduction Row -->
           <h1 class="my-4"><center>About Us</center>
           </h1>
+          <br>
           <center>
-          <p><b>Princeton Club Talk</b> was built as a final project for <a href="https://www.cs.princeton.edu/courses/archive/spring18/cos333/">COS333: Advanced Programming Techniques</a> in <b>Spring 2018</b> taught by <a href="https://www.cs.princeton.edu/~bwk/">Brian Kernighan</a> and <a href="https://www.cs.princeton.edu/people/profile/lumbroso">Jérémie Lumbroso</a>.</p>
-          <br>
-          <p>We would like to give a special thanks to our advisor, <b>Jerry Wei</b>, for the help, advice, and encouragement throughout the development process.</p>
-          <br>
-          <p>We love feedback! If you find any bugs, have any questions, or would like your non-ODUS club to be added, please contact us at <b>princetonclubtalk@gmail.com</b> and we'll get back to you straight away!</p>
-        </center>
+            <div class="row">
+              <div class="col-lg-6">
+                <p><b>Princeton Club Talk</b> was built as a final project for <a href="https://www.cs.princeton.edu/courses/archive/spring18/cos333/">COS333: Advanced Programming Techniques</a> in <b>Spring 2018</b> taught by <a href="https://www.cs.princeton.edu/~bwk/">Brian Kernighan</a> and <a href="https://www.cs.princeton.edu/people/profile/lumbroso">Jérémie Lumbroso</a>. We would like to give a special thanks to our advisor, <b>Jerry Wei</b>, for the help, advice, and encouragement throughout the development process.</p>
+              </div>
+              <br>
+              <div class="col-lg-6">
+                <p>We love feedback! If you find any bugs, have any questions, or would like your non-ODUS club to be added, please contact us at <b>princetonclubtalk@gmail.com</b> and we'll get back to you straight away!</p>
+              </div>
+            </div>
+            <br>
+          </center>
 
           <!-- Team Members Row -->
           <div class="row">
             <div class="col-lg-12">
-              <center><h2 class="my-4">Our Team</h2></center>
+              <center><h1 class="my-4">Our Team</h1></center>
               <br>
             </div>
             <div class="col-lg-4 col-sm-6 text-center mb-4">
@@ -102,10 +108,11 @@
                 </a>
                 </center>
               </h3>
-              <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+              <p>Uri is a CS major getting a certificate in Statistics and Machine Learning. He loves movies and is a big baseball fan. Go Nats!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center mb-4">
-              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="{% static 'images/Michael_pic.jpeg' %}" alt="">
+              <br>
               <h3><center>Michael Stambler<br>
                 <small>ORFE '20</small>
                 <a href="https://www.instagram.com/stambleman7/">
@@ -116,7 +123,8 @@
                 </a>
                 </center>
               </h3>
-              <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+              <p>Michael is an ORFE major getting a certificate in Applications of Computing.  He loves all things music, including singing and playing trombone.
+</p>
             </div>
             
           </div>
