search length message

--- a/page/templates/page/baseB.html
+++ b/page/templates/page/baseB.html
@@ -2,6 +2,13 @@
 {% load templatetags %}
 <!DOCTYPE html>
 <html lang="en">
+{% if messages %}
+      <script>
+        {% for message in messages %}
+          alert("{{ message }}");
+        {% endfor %}
+      </script>
+    {% endif %}
 
   <head>
 
