--- a/page/templates/page/all_reviews.html
+++ b/page/templates/page/all_reviews.html
@@ -122,18 +122,14 @@
                     <strong>Could be improved</strong><br>
                     {{review.CBI}}<br><br>
                     {% endif %}
-                      <label class="btn btn-primary active">
-                        <a href = "{% url 'review_increment' club.pk review.pk %}">
-                          <i class="fas fa-arrow-alt-circle-up"></i>
-                        </a>
+                      <label class="btn btn-primary active upvote" data-url="{% url 'review_increment' club.pk review.pk %}" data-id="{{review.pk}}">
+                          <i class="far fa-arrow-alt-circle-up"></i>
                       </label>
-                      <label class="btn btn-info active">
-                        <a data-toggle="tooltip" data-placement="top" title="How many users found this review helpful.">{{review.rating}}</a>
+                      <label data-toggle="tooltip" data-placement="top" title="How many users found this review helpful." class="btn btn-info active" id="vote_count-{{review.pk}}">
+                        {{review.rating}}
                       </label>
-                      <label class="btn btn-primary active">
-                        <a href="{% url 'review_decrement' club.pk review.pk %}">
-                          <i class="fas fa-arrow-alt-circle-down"></i>
-                        </a>
+                      <label class="btn btn-primary active downvote" data-url="{% url 'review_decrement' club.pk review.pk %}" data-id="{{review.pk}}">
+                          <i class="far fa-arrow-alt-circle-down"></i>
                       </label>
 
                   </div>
