--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -3,6 +3,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    {% if messages %}
+      <script>
+        {% for message in messages %}
+          alert("{{ message }}");
+        {% endfor %}
+      </script>
+    {% endif %}
+
   <head>
 
     <meta charset="utf-8">
