--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -131,7 +131,7 @@
           <div class="card">
             <div class="card-body">
               <h4 class="card-title">
-                <center>Reviews</center></h4>
+                <center>Latest Reviews</center></h4>
                 <center>
                   <a href="{% url 'post_new' pk=club.pk %}" class="btn btn-primary btn-md">Add a review!</a>
                   &nbsp;
@@ -272,7 +272,7 @@
           <div class="card">
             <div class="card-body">
               <h4 class="card-title">
-                <center>Interview Comments</center></h4>
+                <center>Latest Interviews</center></h4>
                 <center>
                   <a href="{% url 'interview_new' pk=club.pk %}" class="btn btn-primary btn-md">Submit interview experience!</a>
                   &nbsp;
